<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maim_tv_hello_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/icon_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_calc_icon"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:src="@drawable/ic_calc_icon"
            android:layout_marginEnd="8dp"
            android:onClick="openCalcActivity"
            android:contentDescription="@string/calc_title"/>

        <ImageView
            android:id="@+id/iv_calc1_icon"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:src="@drawable/ic_calc1_icon"
            android:onClick="openCalcActivity1"
            android:contentDescription="@string/calc_title"/>

    <Button
        android:id="@+id/main_button_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maim_button_hello_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_hello" />
    <Button
        android:id="@+id/main_button_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_hello" />

    </LinearLayout>

    <Button
        android:id="@+id/main_button_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.402"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_hello"
        app:layout_constraintVertical_bias="0.147" />


</androidx.constraintlayout.widget.ConstraintLayout>