<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">


    <TextView
        android:id="@+id/chat_tv_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/chat_tv_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_tv_title"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chat_tv_nik" />

        <EditText
            android:id="@+id/chat_et_nik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            tools:text="@string/chat_et_nik" />

        <ImageButton
            android:id="@+id/chat_btn_save_nik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_save"
            app:tint="@color/black"/>

        <ImageButton
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/ic_dialog_email"
            app:tint="@color/black"/>

    </LinearLayout>


    <ScrollView
        android:id="@+id/chat_sv_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/chat_ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        xmlns:emojicon="http://schemas.android.com/apk/res-auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_sv_container"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingClass">

        <ImageView
            android:id="@+id/emoji_btn"
            android:layout_gravity="start"
            android:src="@mipmap/emoji_icon"
            android:padding="4dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        

        <EditText
                android:id="@+id/chat_et_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Input message" />



        <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
            android:id="@+id/text_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            emojicon:emojiconSize="28sp" />


"

            <ImageButton
            android:id="@+id/chat_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_send"
            app:fabSize="normal"
            app:tint="@color/black" />

<!--        <ImageButton-->
<!--            android:id="@+id/chat_btn_emoji_8"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTintMode="screen"-->
<!--            android:defaultFocusHighlightEnabled="true"-->
<!--            android:src="@drawable/icons8" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/chat_btn_emoji_7"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTintMode="screen"-->
<!--            android:defaultFocusHighlightEnabled="true"-->
<!--            android:src="@drawable/icons7" />-->

<!--        <ImageButton-->
<!--            android:id="@+id/chat_btn_emoji_6"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:backgroundTintMode="screen"-->
<!--            android:defaultFocusHighlightEnabled="true"-->
<!--            android:src="@drawable/icons6" />-->


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>